Play with offset.

--- a/IsItClosedWeb/Views/Home/Index.cshtml
+++ b/IsItClosedWeb/Views/Home/Index.cshtml
@@ -76,6 +76,7 @@
                 <p>
                     Last Updated: @(ViewData["TimeStamp"])
                 </p>
+                <p>Add 4 hours to the time above.</p>
             </div>
         </div>
     </div>
