Update to fix time

--- a/IsItClosedWeb/Views/Home/Index.cshtml
+++ b/IsItClosedWeb/Views/Home/Index.cshtml
@@ -76,7 +76,7 @@
                 <p>
                     Last Updated: @(ViewData["TimeStamp"])
                 </p>
-                <p>Add 2 hours to the time above.</p>
+                @*<p>Add 2 hours to the time above.</p>*@
             </div>
         </div>
     </div>
